--- a/libft_cub/Makefile
+++ b/libft_cub/Makefile
@@ -25,7 +25,7 @@ SRCS		=	ft_bzero.c		ft_isascii.c		ft_memchr.c\
 				ft_strtrim.c	ft_strcpy.c			ft_calloc.c\
 				ft_strcat.c		ft_itoa.c			ft_strmapi.c\
 				ft_putchar_fd.c	ft_putstr_fd.c		ft_putendl_fd.c\
-				ft_putnbr_fd.c	ft_free_tab.c
+				ft_putnbr_fd.c	ft_free_tab.c		ft_putstr.c
 
 BSRC		=	ft_lstnew_bonus.c		ft_lstadd_front_bonus.c\
 				ft_lstsize_bonus.c		ft_lstlast_bonus.c\
