commit sur linux

--- a/Makefilel
+++ b/Makefilel
@@ -8,7 +8,6 @@ MEMFLAGS	=	-ggdb -fsanitize=address
 SRCS_DIR	=	./sources/
 OBJ_DIR		=	./objects/
 INC_DIR		=	./includes/
-MLX_DIR		=	./minilibx_linux/
 
 SRCS		=	cub_main.c
 SRCS		+=	cub_gnl.c
@@ -59,11 +58,11 @@ make_libft_cub:
 	make -C libft_cub/
 
 make_mlx:
-	make -C minilibx-linux/
+	make -C minilibx_macos/
 
 $(NAME): $(OBJ) $(INC_DIR) make_libft_cub make_mlx
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJ) -L $(MLX_DIR) -lmlx -lXext -lX11 -lm ./libft_cub/libft_cub.a
-
+	$(CC) $(CFLAGS) $(OBJ) -I ./minilibx_macos/mlx.h ./minilibx_macos/libmlx.a ./libft_cub/libft_cub.a -framework OpenGL -framework AppKit -I ./libft_cub/includes $(INC) -o $(NAME)
+	
 clean:
 	$(RM_DIR) $(OBJ_DIR)
 	$(MAKE) clean -C libft_cub/
